--- a/Assignment1/Assignment1.csproj
+++ b/Assignment1/Assignment1.csproj
@@ -182,6 +182,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="chef.png" />
     <Content Include="Recipes.aspx" />
     <Content Include="Account\AddPhoneNumber.aspx" />
     <Content Include="Account\Confirm.aspx" />
